<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>club.dawdler</groupId>
		<artifactId>dawdler-boot</artifactId>
		<version>0.1.5-jdk17-RELEASES</version>
	</parent>
	<properties>
		<jakarta.servlet.jsp.version>3.1.1</jakarta.servlet.jsp.version>
		<jakarta.el.version>5.0.1</jakarta.el.version>
		<jakarta.servlet.jsp.jstl.api.version>3.0.2</jakarta.servlet.jsp.jstl.api.version>
		<org.glassfish.web.jstl.version>3.0.1</org.glassfish.web.jstl.version>
	</properties>
	<artifactId>dawdler-boot-web-tomcat-jsp-source</artifactId>
	<name>dawdler-boot-web-tomcat-jsp-source</name>
	<dependencies>
		<dependency>
			<groupId>jakarta.servlet.jsp</groupId>
			<artifactId>jakarta.servlet.jsp-api</artifactId>
			<version>${jakarta.servlet.jsp.version}</version>
		</dependency>
		<dependency>
			<groupId>jakarta.el</groupId>
			<artifactId>jakarta.el-api</artifactId>
			<version>${jakarta.el.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.ant</groupId>
			<artifactId>ant</artifactId>
			<version>${org.apache.ant.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jdt</groupId>
			<artifactId>ecj</artifactId>
			<version>${org.eclipse.jdt.ect.version}</version>
		</dependency>
		<dependency>
			<groupId>club.dawdler</groupId>
			<artifactId>dawdler-boot-web-tomcat</artifactId>
		</dependency>
		<dependency>
			<groupId>jakarta.servlet.jsp.jstl</groupId>
			<artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
			<version>${jakarta.servlet.jsp.jstl.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.web</groupId>
			<artifactId>jakarta.servlet.jsp.jstl</artifactId>
			<version>${org.glassfish.web.jstl.version}</version>
		</dependency>
		<dependency>
			<groupId>club.dawdler</groupId>
			<artifactId>dawdler-boot-web-tomcat-source</artifactId>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<encoding>${project.build.sourceEncoding}</encoding>
					<source>17</source>
					<target>17</target>
					<compilerArgs>
						<arg>--add-exports</arg>
						<arg>
							java.compliter/javax.tools=dawdler-boot-web-tomcat-jsp-source</arg>
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>